Add form to markup

--- a/index.pug
+++ b/index.pug
@@ -34,4 +34,9 @@ html(lang="en")
                         img(src="", alt="Image description")
                     h3 Description
                     p   This is a description Tag
+        section#contactMe.contact-me
+                form(action="/suscription")
+                    h2 Let's create something together
+                    input(type="text" placeholder="Drop a line" id="email")
+                    button Send
         footer#footer
