Star styles on the project

--- a/index.pug
+++ b/index.pug
@@ -7,16 +7,16 @@ html(lang="en")
             nav.navigation
                 ul
                     li.list-item
-                        a.list-item__link Portfolio
+                        a.list-item__link(href="#portfolio") Portfolio
                     li.list-item
-                        a.list-item__link About Me
+                        a.list-item__link(href="#aboutMe") About Me
                     li.list-item
-                        a.list-item__link Let's work together
+                        a.list-item__link(href="#contactMe") Let's work together
         section#mainSection.presentation 
             h1 Hi! I'm Maria Paulina 
                 span UI Designer
         section#portfolio.portfolio
-            h2 Porfolio
+            h2 Portfolio
             article 
                 h3 Project 1
                 h6 Text Description
