--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface');
+
+$grey-light: #f1f1f1;
 
 * {
     margin: 0px;
@@ -7,3 +10,6 @@ body {
     background-color: #f1f1f1;
     font-family: 'Arial', 'Helvetica';
 }
+
+
+@import 'layout'
